<resources>
    <string name="app_name">נגב ZOO</string>
    <!--preferences-->
    <string name="notifications">התראות</string>
    <string name="language">שפה</string>
    <string name="language_eng">English</string>
    <string name="language_heb">עברית</string>
    <string name="language_arb">عربى</string>
    <string name="language_rus">русский</string>

    <!--main menu buttons-->
    <string name="watch_all_feed">קרא עוד</string>
    <string name="news_feed">קיר עדכונים:</string>
    <string name="our_enclosures">המתחמים שלנו</string>
    <string name="schedule">לוח שנה</string>
    <string name="today_rec_events">אירועי היום:</string>
    <string name="map">מפה</string>
    <string name="other_info">מידע נוסף</string>
    <string name="nav">נווט אלינו</string>
    <string name="personal">Personal Stories</string>

    <!-- Animal Activity -->
    <string name="title_activity_animal">החיות שלנו</string>
    <string name="about_animal">על החיות שלנו</string>
    <string name="about_species">על המין</string>
    <string name="preservation">מצב שימור:</string>
    <string name="doesnt_know">מצב שימור לא ידוע</string>
    <string name="category">מחלקה:</string>
    <string name="series">סדרה:</string>
    <string name="family">משפחה:</string>
    <string name="whoLives">מי גר כאן:</string>
    <string name="assets">תמונות וסרטונים:</string>
    <string name="distribution">תפוצה: דרום אמריקה</string>
    <string name="reproduction">רבייה:</string>
    <string name="food">תזונה:</string>
    <string name="interesting">משהו מעניין עליי:</string>
    <string name="shareOnFacebook">שתף בפייסבוק</string>
    <string name="showOnMap">הראה במפה</string>
    <string name="about_enc">על המתחם:</string>
    <string name="next_event">אירוע קרוב:</string>
    <!--preservation strings-->
    <string name="preservation0">לא ידוע</string>
    <string name="preservation1">ללא חשש</string>
    <string name="preservation2">קרוב לאיום</string>
    <string name="preservation3">פגיע</string>
    <string name="preservation4">בסכנת הכחדה</string>
    <string name="preservation5">בסכנת הכחדה חמורה</string>
    <string name="preservation6">נכחד בטבע</string>
    <string name="preservation7">נכחד</string>

    <!-- General Info -->
    <!--contact ways-->
    <string name="contact_us_headline">דרכי התקשרות</string>
    <string name="contact_info">יצירת קשר</string>
    <string name="conatct_address">כתובת</string>

    <string name="prices">מחירון</string>
    <string name="free">חינם</string>
    <string name="population">אוכלוסיה</string>
    <string name="opening_hours_headline">זמני פתיחה</string>
    <string name="opening_hours">שעות פתיחה</string>
    <string name="about_us">אודות</string>
    <string name="contact_address">כתובת</string>
    <string name="prices_headline">מחירון:</string>
    <string name="days">ימים</string>
    <string name="hours">שעות</string>

    <string name="searchPlaceHolder">הכנס שם של חיה או מתחם</string>
    <string name="enclosures">מתחמים</string>
    <string name="animals">חיות</string>
    <string name="choose_route">בחר מסלול</string>


    <!-- Schedule -->
    <string name="todays_event">אירועי היום</string>
    <string name="facebook_app_id">1991264511112012</string>
    <string name="facebook_login_protocol_scheme">fb1991264511112012</string>

    <!--Gps provider dialog-->
    <string name="gps_no_permission_dialog_title">הרשאת מיקום</string>
    <string name="gps_no_permission_dialog_message">ביטול הרשאה למיקום המכשיר יבטל חלק מתכונות האפליקציה</string>
    <string name="gps_no_permission_dialog_approve">אפשר מיקום</string>
    <string name="gps_no_permission_dialog_disapprove">אל תאפשר מיקום</string>
    <string name="gps_no_activated_dialog_activate_needed">אנא הדליקו את שירות מיקומי המכשיר</string>
    <string name="gps_no_activated_dialog_open_settings">פתח הגדרות</string>
    <string name="gps_no_activated_dialog_do_not_open_settings">ביטול</string>
    <string name="gps_no_activated_dialog_title">הגדרות מיקומי המכשיר</string>

    <!--map-->
    <string name="map_get_to_know_me_text">לחץ כאן כדי להכיר אותי</string>
    <string name="map_bad_gps_signal">קליטת מיקום חלשה, לא ניתן לקבוע מיקום</string>

    <string name="title_activity_general_info">GeneralInfoActivity</string>

    <string name="no_data">אין מידע</string>


    <string name="turn_the_volume">הגבר את עוצמת השמע</string>

    <string name="init_bad">מצטערים אבל ישנה בעיה. אנא סגרו את האפלייקציה ופתחו אותה שוב</string>

    <string name="confirm">אישור</string>

    <string name="vertical_ellipsis">&#8942;</string>

    <string name="language_preferences">language</string>
    <string name="notification_preferences">notification</string>
    <string name="cant_share_facebook">אי אפשר לשתף, פייסבוק לא מותקן</string>

    <!--bold and underline text-->
    <string name="register"><u><b>Copyright</b></u></string>

    <!--ERROR MESSAGES-->
    <string name="error_no_schedule">אין אירועים בלוח השנה בשפה המבוקשת</string>
    <string name="error_no_rec_events">אין אירועים היום בשפה המבוקשת</string>
    <string name="error_no_about_us">לא קיים מידע אודותינו בשפה המבוקשת</string>
    <string name="error_no_contact_infos">לא קיים מידע על דרכי יצירת קשר בשפה המבוקשת</string>
    <string name="error_no_prices">לא קיים מידע על מחירים בשפה המבוקשת</string>
</resources>
