<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <item android:id="@+id/notifications"
        android:title="@string/notifications"
        android:checkable="true">
    </item>
    <item android:id="@+id/file"
        android:title="@string/language" >
        <!-- "file" submenu -->
        <menu>
            <item android:id="@+id/language_eng"
                android:title="@string/language_eng" />
            <item android:id="@+id/language_heb"
                android:title="@string/language_heb" />
            <item android:id="@+id/language_arb"
                android:title="@string/language_arb" />
            <item android:id="@+id/language_rus"
                android:title="@string/language_rus" />
        </menu>
    </item>
</menu>