<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="0dp"
    tools:context="com.zoovisitors.pl.animalActivity.AnimalActivity">

    <LinearLayout
        android:id="@+id/linear_general_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/general_info_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_general_info"
            android:textAlignment="center"
            android:textSize="24sp" />

        <android.support.design.widget.TabLayout
            android:id="@+id/generalInfoTab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_green_dark">

            <android.support.design.widget.TabItem
                android:id="@+id/general_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_info" />

            <android.support.design.widget.TabItem
                android:id="@+id/opening_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opening_hours" />

            <android.support.design.widget.TabItem
                android:id="@+id/prices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prices" />

            <android.support.design.widget.TabItem
                android:id="@+id/about_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us" />

        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/general_info_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
