<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.zoovisitors.pl.enclosures.EnclosureActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/enclosureMainLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.zoovisitors.pl.customViews.TextViewOutline
                    android:id="@+id/enclosureName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/enclosureImage"
                        android:layout_width="match_parent"
                        android:layout_height="123dp"
                        android:scaleType="fitXY"
                        app:srcCompat="@color/cardview_light_background" />

                    <ImageView
                        android:id="@+id/enclosure_audio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginBottom="41dp"
                        android:layout_marginEnd="53dp"
                        android:scaleType="fitXY"/>
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/enclosureClosestEventLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <com.zoovisitors.pl.customViews.TextViewTitle
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/next_event"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        >

                        <com.zoovisitors.pl.customViews.TextViewRegularText
                            android:id="@+id/closesEventText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="5dp"/>

                        <com.zoovisitors.pl.customViews.TextViewRegularText
                            android:id="@+id/closestEventTimer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:background="@drawable/up_down_border"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    >

                    <com.zoovisitors.pl.customViews.ButtonCustomView
                        android:id="@+id/shareOnFacebook"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingTop="2dp"
                        android:gravity="center"
                        />

                    <com.zoovisitors.pl.customViews.ButtonCustomView
                        android:id="@+id/showOnMap"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/showOnMap"
                        android:paddingTop="2dp"
                        android:gravity="center"

                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:paddingTop="5dp"
                    android:background="@drawable/up_down_border">

                    <com.zoovisitors.pl.customViews.TextViewTitle
                        android:text="@string/about_enc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                    <com.zoovisitors.pl.customViews.TextViewRegularText
                        android:id="@+id/enc_story_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/up_down_border"
                    android:orientation="vertical"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="1dp">

                    <com.zoovisitors.pl.customViews.TextViewTitle
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/whoLives"
                        />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/animal_recycle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:clipToPadding="false"

                        >

                    </android.support.v7.widget.RecyclerView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:paddingTop="5dp"
                    android:background="@drawable/up_down_border"
                    >

                    <com.zoovisitors.pl.customViews.TextViewTitle
                        android:id="@+id/enc_assets_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/assets"/>

                    <GridLayout
                        android:id="@+id/enc_asset_grid_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:columnCount="3">
                    </GridLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

</LinearLayout>